--- a/GetaGadgetAPI/GetaGadget.BusinessLogic/GetaGadget.BusinessLogic.csproj
+++ b/GetaGadgetAPI/GetaGadget.BusinessLogic/GetaGadget.BusinessLogic.csproj
@@ -5,10 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.19" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="8.30.0.37606">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GetaGadget.Common\GetaGadget.Common.csproj" />
+    <ProjectReference Include="..\GetaGadget.Domain\GetaGadget.Domain.csproj" />
   </ItemGroup>
 
 </Project>
