Order and wishlist

--- a/GetaGadgetAPI/GetaGadget.API/appsettings.json
+++ b/GetaGadgetAPI/GetaGadget.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseConnectionString": "Data Source=localhost;Initial Catalog=GetaGadget;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DatabaseConnectionString": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=GetaGadget;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=true"
   },
   "AppSettings": {
     "TokenSecret": "s4DfiYo87D689eLiEpCBVSG-CZcpRarEVWV_D-BEgwohqY3GdNA2myOfXD626CWwe1-3C58kmwZheAutdBhCrp65iAmWd5fM5vuu-WT9UiYLf8MAy9s8bO8oOObF7K_xrpL0jtkEfB4-3wcQ8F1-k_4"
