--- a/GetaGadgetAPI/GetaGadget.BusinessLogic/GetaGadget.BusinessLogic.csproj
+++ b/GetaGadgetAPI/GetaGadget.BusinessLogic/GetaGadget.BusinessLogic.csproj
@@ -6,11 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Leadtools.Formats.Raster.Common" Version="22.0.0.4" />
+    <PackageReference Include="Lucene.Net" Version="3.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.19" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="8.30.0.37606">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
